manifests/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapi-deploy
  namespace: testapi
spec:
  selector:
    matchLabels:
      app: testapi
  replicas: 2
  template:
    metadata:
      labels:
        app: testapi
    spec:
      containers:
      - name: testapi
        image: eljinliber/testapi
        ports:
        - containerPort: 8001
