manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapi-deploy
spec:
  selector:
    matchLabels:
      app: testapi
  replicas: 2
  template:
    metadata:
      labels:
        app: testapi
    spec:
      containers:
      - name: testapi
        image: faresherhar/testapi:python-3.9-slim
        ports:
        - containerPort: 8001
      imagePullSecrets:
        - name: regcred
