manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapi-service
  namespace: testapi
spec:
  selector:
    app: testapi
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: testapi
spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
